--- a/HelloAndroid-Sourcecode/app/src/main/res/layout/activity_second2.xml
+++ b/HelloAndroid-Sourcecode/app/src/main/res/layout/activity_second2.xml
@@ -40,8 +40,8 @@
         android:clickable="true"
         android:cursorVisible="true"
         android:focusable="true"
-        android:hint="Weight"
-        android:inputType="none"
+        android:inputType="number"
+        android:hint="Weight(lbs)"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,11 +66,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="32dp"
-        android:clickable="true"
-        android:cursorVisible="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:hint="Date"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:hint="mm/dd/yyyy"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="0.50dp"
         android:layout_marginStart="100dp"
-        android:text="@string/delete"
+        android:text="@string/Clear"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
