--- a/HelloAndroid-Sourcecode/app/src/main/res/layout/activity_fourth2.xml
+++ b/HelloAndroid-Sourcecode/app/src/main/res/layout/activity_fourth2.xml
@@ -10,25 +10,30 @@
     tools:context=".Fourth2Activity">
 
     <!--header-->
+
+
     <TextView
         android:id="@+id/AccountSetting"
-        android:layout_width="442dp"
-        android:layout_height="117dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:padding="30dp"
-        android:text="Account Setting"
+        android:layout_width="260dp"
+        android:layout_height="72dp"
+        android:layout_column="1"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="44dp"
+        android:padding="3dip"
+        android:text="Account Form"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <EditText
-        android:id="@+id/enterName"
+        android:id="@+id/startweight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -37,36 +42,15 @@
         android:clickable="true"
         android:cursorVisible="true"
         android:focusable="true"
-        android:hint="Enter the Name"
-        android:inputType="none"
+        android:hint="Starting Weight(lbs)"
+        android:inputType="number"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.412"
+        app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.152" />
-
-    <EditText
-        android:id="@+id/entergender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:clickable="true"
-        android:cursorVisible="true"
-        android:focusable="true"
-        android:hint="Enter the Gender"
-        android:inputType="none"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.41"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.26" />
-
+        app:layout_constraintVertical_bias="0.136" />
 
     <EditText
         android:id="@+id/Height"
@@ -78,16 +62,15 @@
         android:clickable="true"
         android:cursorVisible="true"
         android:focusable="true"
-        android:hint="Enter the Height"
-        android:inputType="none"
+        android:hint="Height(cms)"
+        android:inputType="number"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintHorizontal_bias="0.697"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.463" />
-
+        app:layout_constraintVertical_bias="0.451" />
 
     <EditText
         android:id="@+id/GoalWeight"
@@ -99,15 +82,15 @@
         android:clickable="true"
         android:cursorVisible="true"
         android:focusable="true"
-        android:hint="Enter the GoalWeight"
-        android:inputType="none"
+        android:hint="Goal Weight(lbs)"
+        android:inputType="number"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.787"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.354" />
+        app:layout_constraintVertical_bias="0.364" />
 
     <EditText
         android:id="@+id/GoalDate"
@@ -116,20 +99,22 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:clickable="true"
-        android:cursorVisible="true"
-        android:focusable="true"
-        android:hint="Date"
-        android:textSize="16sp"
-        android:textAlignment="center"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:hint="mm/dd/yyy"
         android:inputType="none"
+        android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.386"
+        app:layout_constraintHorizontal_bias="0.844"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.557" />
-<Button
+        app:layout_constraintVertical_bias="0.536" />
+
+    <Button
 android:id="@+id/accountSavebtn"
 android:layout_width="75dp"
 android:layout_height="45dp"
@@ -151,7 +136,7 @@ android:layout_width="75dp"
 android:layout_height="45dp"
 android:layout_margin="0.50dp"
 android:layout_marginStart="100dp"
-android:text="Delete"
+android:text="Clear"
 android:textSize="12dp"
 android:textStyle="bold"
 app:layout_constraintBottom_toBottomOf="parent"
@@ -227,6 +212,122 @@ app:layout_constraintVertical_bias="0.695" />
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.845" />
+
+    <TextView
+        android:id="@+id/TextviewGender"
+        android:layout_width="61dp"
+        android:layout_height="15dp"
+        android:text="Gender"
+        android:textAlignment="center"
+        android:textSize="16dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <RadioGroup
+        android:id="@+id/rdgGender"
+        android:layout_width="202dp"
+        android:layout_height="74dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.882"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.263">
+
+        <RadioButton
+            android:id="@+id/rdbFemale"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:onClick="onRadioButtonClicked"
+            android:text="Female"
+            android:textSize="16dp" />
+
+        <RadioButton
+            android:id="@+id/rdbMale"
+            android:layout_width="138dp"
+            android:layout_height="46dp"
+            android:layout_marginStart="16dp"
+            android:onClick="onRadioButtonClicked"
+            android:text="Male"
+            android:textSize="16dp" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="131dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="16dp"
+        android:text="Start Weight"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/startweight"
+        app:layout_constraintHorizontal_bias="0.152"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.172" />
+
+    <TextView
+        android:id="@+id/accheight"
+        android:layout_width="131dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="16dp"
+        android:text="Height"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/startweight"
+        app:layout_constraintHorizontal_bias="0.152"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/accgoalweight"
+        app:layout_constraintVertical_bias="0.137" />
+
+    <TextView
+        android:id="@+id/accgoalweight"
+        android:layout_width="131dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="16dp"
+        android:text="Goal Weight"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/startweight"
+        app:layout_constraintHorizontal_bias="0.152"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/accgender"
+        app:layout_constraintVertical_bias="0.159" />
+
+    <TextView
+        android:id="@+id/accgender"
+        android:layout_width="131dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="16dp"
+        android:text="Gender"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/startweight"
+        app:layout_constraintHorizontal_bias="0.152"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/startweight"
+        app:layout_constraintVertical_bias="0.12" />
+
+    <TextView
+        android:id="@+id/accdate"
+        android:layout_width="134dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="16dp"
+        android:text="Date"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/startweight"
+        app:layout_constraintHorizontal_bias="0.152"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/accheight"
+        app:layout_constraintVertical_bias="0.151" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
