--- a/HelloAndroid-Sourcecode/app/src/main/res/layout/activity_main.xml
+++ b/HelloAndroid-Sourcecode/app/src/main/res/layout/activity_main.xml
@@ -11,66 +11,125 @@
     android:paddingBottom="15dp"
     tools:context="com.jblearning.helloandroid.MainActivity">
 
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/my_background_color">
+        android:background="@color/my_background_color"
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="-140dp">
         <!-- Your layout content here -->
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="313dp"
-            android:layout_height="62dp"
+            android:layout_width="203dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="22dp"
-            android:layout_marginEnd="68dp"
-            android:layout_marginBottom="395dp"
+            android:layout_marginStart="7dp"
+            android:layout_marginEnd="192dp"
+            android:layout_marginBottom="452dp"
             android:text="Latest Entry"
-            android:textSize="35dp"
+            android:textSize="25dp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textViewWelcome"
-            android:layout_width="wrap_content"
-            android:layout_height="113dp"
+            android:layout_width="394dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="237dp"
-            android:layout_marginEnd="32dp"
-            android:padding="30dp"
-            android:text="Welcome to the WeightTracker"
-            android:textAlignment="center"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="222dp"
+            android:layout_marginEnd="7dp"
+            android:ellipsize="end"
+            android:gravity="center"
             android:orientation="horizontal"
-            android:textSize="20dp"
+            android:padding="30dp"
+            android:singleLine="true"
+            android:text="Welcome to WeightTracker"
+            android:textSize="23dp"
             android:textStyle="bold"
-
-            tools:ignore="HardcodedText" />
+            app:layout_constraintEnd_toStartOf="@+id/textView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/displayTextView"
-            android:layout_width="372dp"
-            android:layout_height="75dp"
+            android:id="@+id/displayWeight"
+            android:layout_width="wrap_content"
+            android:layout_height="66dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="26dp"
+            android:layout_marginStart="75dp"
+            android:layout_marginEnd="-61dp"
+            android:layout_marginBottom="361dp"
+            android:text="Weight:"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+        <TextView
+            android:id="@+id/dateview"
+            android:layout_width="107dp"
+            android:layout_height="33dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="153dp"
+            android:layout_marginEnd="148dp"
             android:layout_marginBottom="331dp"
-            android:text=" "
-            android:textSize="20dp" />
+            android:text=""
+            android:textSize="25dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/displayDate"
+            android:layout_width="wrap_content"
+            android:layout_height="66dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="78dp"
+            android:layout_marginEnd="-59dp"
+            android:layout_marginBottom="301dp"
+            android:text="Date :"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+        <TextView
+            android:id="@+id/weightview"
+            android:layout_width="107dp"
+            android:layout_height="33dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="164dp"
+            android:layout_marginEnd="130dp"
+            android:layout_marginBottom="392dp"
+            android:text=""
+            android:textSize="25dp"
+            android:textStyle="bold" />
+
+
     </RelativeLayout>
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="515dp"
-        android:layout_height="213dp"
+        android:layout_width="530dp"
+        android:layout_height="142dp"
         android:contentDescription="WeightLoss"
         android:scaleType="fitXY"
         android:src="@drawable/weightloss"
-        tools:layout_editor_absoluteX="5dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-5dp" />
 
     <Button
         android:id="@+id/HomeActivityBtn"
