--- a/HelloAndroid-Sourcecode/app/src/main/res/layout/activity_third2.xml
+++ b/HelloAndroid-Sourcecode/app/src/main/res/layout/activity_third2.xml
@@ -5,12 +5,12 @@
     android:id="@+id/constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/my_background_color"
     android:orientation="vertical"
     android:paddingStart="5dp"
     android:paddingEnd="5dp"
     android:paddingBottom="15dp"
-    tools:context="com.jblearning.helloandroid.ThirdActivity"
-    android:background="@color/my_background_color">
+    tools:context="com.jblearning.helloandroid.ThirdActivity">
 
     <TextView
         android:id="@+id/Historyform"
@@ -33,16 +33,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_history"
-        android:layout_width="410dp"
-        android:layout_height="435dp"
+        android:layout_width="346dp"
+        android:layout_height="490dp"
         android:clipToPadding="false"
         android:padding="16dp"
         android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/HistoryActivityBtn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.391" />
+        app:layout_constraintTop_toBottomOf="@+id/Historyform"
+        app:layout_constraintVertical_bias="0.61" />
 
     <Button
         android:id="@+id/HomeActivityBtn"
