--- a/HelloAndroid-Sourcecode/app/src/main/res/layout/expanded_image.xml
+++ b/HelloAndroid-Sourcecode/app/src/main/res/layout/expanded_image.xml
@@ -8,7 +8,9 @@
 
     <ImageView
         android:id="@+id/expandedImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         />
 </LinearLayout>
