--- a/HelloAndroid-Sourcecode/app/src/main/res/layout/item_weight_entry.xml
+++ b/HelloAndroid-Sourcecode/app/src/main/res/layout/item_weight_entry.xml
@@ -4,6 +4,10 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp"
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
     android:background="@drawable/item_border">
 
     <TextView
@@ -12,10 +16,14 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:padding="8dp"
         android:text="Weight: "
         android:textSize="14sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+         android:layout_margin="2dp"/>
     <View
         android:layout_width="1dp"
         android:layout_height="match_parent"
@@ -27,7 +35,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:gravity="center"
-        android:padding="8dp"
         android:textSize="14sp"
         android:text="Date: "
         android:textStyle="bold" />
@@ -36,12 +43,22 @@
         android:layout_height="match_parent"
         android:background="#000000" />
 
-    <ImageButton
+    <!--ImageButton
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_launcher_foreground"
-        android:contentDescription="ClicktoExpand" />
+        android:contentDescription="ClicktoExpand" /-->
+    <ImageView
+        android:id="@+id/imageButton"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:paddingStart="4dp"
+         android:paddingEnd="4dp"
+        android:paddingTop="4dp"
+         android:paddingBottom="4dp"
+         android:layout_margin="2dp"
+         android:scaleType="centerCrop" />
     <View
         android:layout_width="1dp"
         android:layout_height="match_parent"
@@ -51,7 +68,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="8dp"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:layout_margin="2dp"
         android:src="@android:drawable/ic_delete"
         android:contentDescription="Delete" />
 
